--- a/template.tex
+++ b/template.tex
@@ -668,6 +668,10 @@ Note that while figure~\ref{fig:calib} illustrates only few points on the cdf, t
   %%%%%%%%%%%%%%%%%%%%%%%%%%
   \subsection{Image datasets}
   %%%%%%%%%%%%%%%%%%%%%%%%%%
+  \textcolor{petr}{
+    The experiments are performed on two different datasets, the Pittsburgh dataset [] and Tokyo 24/7 dataset [].
+
+  }
     \paragraph{Image database.}
       We performed experiments on a database of Google Streetview images from the Internet. We downloaded panoramas from Pittsburgh (U.S.) covering roughly an area of $1.3 \times 1.2 \; {\rm km}^2$. Similar to~\cite{Chen11}, we generate for each panorama 12 overlapping perspective views corresponding to two different elevation angles $4^\circ$ and $28^\circ$ to capture both the street-level scene and the building fa\c{c}ades. This results in a total of 24 perspective views each with $90^\circ$ FOV and resolution of $960 \times 720$ pixels. In this manner we generate two datasets. The first smaller dataset covers a smaller area and contains $25$k perspective images.  The second larger dataset contains $55$k images.
 
