Results merged, 24/7 described

--- a/mybib.bib
+++ b/mybib.bib
@@ -1,3 +1,20 @@
+@inproceedings{Torii2015,
+author = {Torii, A. and Arandjelovi\'c, R. and Sivic, J. and Okutomi, M. and Pajdla, T.},
+title = {24/7 place recognition by view synthesis},
+booktitle = {CVPR},
+year = {2015},
+}
+
+@misc{GoogleResearch,
+  author = {Google},
+  url = {http://www.icmla-conference.org/icmla11/challenge.htm},
+  title = {ICMLA 2011 StreetView Recognition Challenge}
+}
+@misc{GronatProjectPage,
+author = {Gron{\'a}t, Petr},
+title = {Project webpage: Learning and calibrating per-location classifiers for visual place recognition},
+url = {http://www.di.ens.fr/willow/research/perlocation/}
+}
 @inproceedings{Cao13,
   author = {Cao, Song and Snavely, Noah},
   booktitle = {CVPR},
