--- a/tableResultsFVmerge.tex
+++ b/tableResultsFVmerge.tex
@@ -45,6 +45,18 @@
 	    \rowcolor{maroon!10}
 	    \textbf{FV2048 w-norm}  & \textbf{50.2} & \textbf{57.3} & \textbf{67.0} & \textbf{73.8} & \textbf{78.0} \\
 	    \hline
+	    \rowcolor{maroon!10}
+		\textcolor{petr}{FV16384}						&\textcolor{petr}{45.3}     
+	    												&\textcolor{petr}{54.1}     
+	    												&\textcolor{petr}{63.8}     
+	    												&\textcolor{petr}{69.4}    
+	    												&\textcolor{petr}{75.3}   \\ 
+	    \rowcolor{maroon!10}
+	    \textcolor{petr}{\textbf{FV16384 w-norm}}		&\textcolor{petr}{\textbf{49.3}}      
+	    												&\textcolor{petr}{\textbf{56.0}}      
+	    												&\textcolor{petr}{\textbf{65.9}}      
+	    												&\textcolor{petr}{\textbf{72.5}}      
+	    												&\textcolor{petr}{\textbf{76.8}} 	\\
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	% 				Pittsburgh 55k
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -81,31 +93,63 @@
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 			\rowcolor{maroon!40}
-			\multicolumn{1}{|c}{\quad} & \multicolumn{5}{c|}{Tokyo 24/7} \\
+			\multicolumn{1}{|c}{\quad} & \multicolumn{5}{c|}{24/7 Tokyo} \\
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\hline
 		\rowcolor{maroon!10}
-		FV128                 	&14.2     &20.0     &27.9     &34.2     &41.5 \\
+		\textcolor{petr}{FV128} 						&\textcolor{petr}{14.2}     
+														&\textcolor{petr}{20.0}     
+														&\textcolor{petr}{27.9}     
+														&\textcolor{petr}{34.2}     
+														&\textcolor{petr}{41.5} \\
 		\rowcolor{maroon!10}
-		\textbf{FV128 w-norm}              	&\textbf{16.9}     &\textbf{22.0}     &\textbf{29.6}     &\textbf{37.2}     &\textbf{44.8} \\  
+		\textcolor{petr}{\textbf{FV128 w-norm}}       	&\textcolor{petr}{\textbf{16.9}}     
+														&\textcolor{petr}{\textbf{22.0}}    
+														&\textcolor{petr}{\textbf{29.6}}    
+														&\textcolor{petr}{\textbf{37.2}}     
+														&\textcolor{petr}{\textbf{44.8}} \\  
 	    \hline  
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\rowcolor{maroon!10}
-		FV512					&35.2      &40.3       &43.8      &48.2      &57.1 \\
+		\textcolor{petr}{FV512}							&\textcolor{petr}{35.2}      
+														&\textcolor{petr}{40.3}       
+														&\textcolor{petr}{43.8}      
+														&\textcolor{petr}{48.2}      
+														&\textcolor{petr}{57.1} \\
 		\rowcolor{maroon!10}
-		\textbf{FV512 w-norm}	&\textbf{36.1}       &\textbf{42.0}      &\textbf{46.8}       &\textbf{52.8}       &\textbf{61.4} \\ 
+		\textcolor{petr}{\textbf{FV512 w-norm}}			&\textcolor{petr}{\textbf{36.1}}       
+														&\textcolor{petr}{\textbf{42.0}}      
+														&\textcolor{petr}{\textbf{46.8}}
+														&\textcolor{petr}{\textbf{52.8}}       
+														&\textcolor{petr}{\textbf{61.4}} \\ 
 	    \hline   
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     	\rowcolor{maroon!10}
-    	FV2048             		&37.4       &42.5       &48.5       &53.9       &58.7 	\\
+    	\textcolor{petr}{FV2048}						&\textcolor{petr}{37.4}       
+					    								&\textcolor{petr}{42.5}       
+					    								&\textcolor{petr}{48.5}       
+					    								&\textcolor{petr}{53.9}       
+					    								&\textcolor{petr}{58.7} 	\\
     	\rowcolor{maroon!10}
-		\textbf{FV2048 w-norm} 	&\textbf{42.9}       &\textbf{46.7}       &\textbf{52.8}       &\textbf{58.8}       &\textbf{66.7} \\
+		\textcolor{petr}{\textbf{FV2048 w-norm}}		&\textcolor{petr}{\textbf{42.9}}       
+														&\textcolor{petr}{\textbf{46.7}}       
+														&\textcolor{petr}{\textbf{52.8}}       
+														&\textcolor{petr}{\textbf{58.8}}       
+														&\textcolor{petr}{\textbf{66.7}} \\
 	    \rowcolor{maroon!10}
 	    \hline   
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%	    
-	    FV4096            	&42.9     &46.3     &54.0     &59.0    &64.8   \\ 
+	    \textcolor{petr}{FV4096}						&\textcolor{petr}{42.9}     
+	    												&\textcolor{petr}{46.3}     
+	    												&\textcolor{petr}{54.0}     
+	    												&\textcolor{petr}{59.0}    
+	    												&\textcolor{petr}{64.8}   \\ 
 	    \rowcolor{maroon!10}
-	    \textbf{FV4096 w-norm} 		&\textbf{44.3}      &\textbf{47.1}      &\textbf{54.7}      &\textbf{61.1}      &\textbf{66.5} 	\\
+	    \textcolor{petr}{\textbf{FV4096 w-norm}}		&\textcolor{petr}{\textbf{44.3}}      
+	    												&\textcolor{petr}{\textbf{47.1}}      
+	    												&\textcolor{petr}{\textbf{54.7}}      
+	    												&\textcolor{petr}{\textbf{61.1}}      
+	    												&\textcolor{petr}{\textbf{66.5}} 	\\
 	    \hline
 \end{tabularx}
 
