--- a/tableResults03.tex
+++ b/tableResults03.tex
@@ -16,11 +16,23 @@
     BOW           & 28.7  & 35.7  & 45.8 & 53.7   & 61.5 \\
       \rowcolor{maroon!10}
     
-    \textcolor{petr}{BOW  Knopp[]}  & \textcolor{petr}{29.6}  & \textcolor{petr}{37.3}  & \textcolor{petr}{48.9} & \textcolor{petr}{59.3}   & \textcolor{petr}{69.2}  \\
+    \textcolor{petr}{BOW  Knopp[]}  & \textcolor{petr}{29.6}  
+                                    & \textcolor{petr}{37.3}  
+                                    & \textcolor{petr}{48.9} 
+                                    & \textcolor{petr}{59.3}   
+                                    & \textcolor{petr}{69.2}  \\
       \rowcolor{maroon!10}
-		BOW w-norm  & 31.8    & 38.7  & 49.7  & \textbf{60.2}  & \textbf{69.4} \\
+		BOW w-norm                      & 31.8    
+                                    & 38.7  
+                                    & 49.7  
+                                    & \textbf{60.2}  
+                                    & \textbf{69.4} \\
       \rowcolor{maroon!10}
-    BOW p-val     & \textbf{33.0}  & \textbf{40.3}  & \textbf{50.2} & 58.7   &  66.4 \\
+    BOW p-val                       & \textbf{33.0}  
+                                    & \textbf{40.3}  
+                                    & \textbf{50.2} 
+                                    & 58.7   
+                                    & 66.4 \\
     \hline
   %   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		% \rowcolor{maroon!10}
