Scalability and complexity - sketch

--- a/mybib.bib
+++ b/mybib.bib
@@ -1,3 +1,12 @@
+@article{Flann2014,
+  title={Scalable Nearest Neighbor Algorithms for High Dimensional Data},
+  author={Marius Muja and David G. Lowe},
+  journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+  volume={36},
+  year={2014},
+  publisher={IEEE}
+}
+
 @inproceedings{Torii2015,
 author = {Torii, A. and Arandjelovi\'c, R. and Sivic, J. and Okutomi, M. and Pajdla, T.},
 title = {24/7 place recognition by view synthesis},
