--- a/template.tex
+++ b/template.tex
@@ -152,10 +152,10 @@ placed here. General acknowledgments should be placed at the end of the article.
 
 \begin{figure}[th]
   \textbf{
-    \hspace{0.05\linewidth} Calibrated e-SVMs classifiers \hspace{0.15\linewidth} Retrieved locations \hspace{0.05\linewidth}
+    \hspace{0.15\linewidth}Query image\hspace{0.3\linewidth} Retrieved locations \hspace{0.05\linewidth}
   }
   \includegraphics[width=1.0\linewidth]{imgs/titleVertical.pdf}
-  \textbf{\textcolor{white}{\quad\quad}Query image}
+  \textbf{\textcolor{white}{\quad\quad}Calibrated e-SVMs classifiers}
   \caption{
           The goal of this work is to localize a query photograph (left bottom) by finding other images of the same place in a large geotagged image database (right column). We cast the problem as a classification task and learn a classifier for each location in the database. 
           We develop two procedures to calibrate the outputs of the large number of per-location classifiers without the need for additional labeled training data.
@@ -928,7 +928,7 @@ Note that while figure~\ref{fig:calib} illustrates only few points on the cdf, t
 
 
 \textcolor{petr}{
-    At query time the calibrated e-SVM score~\eqref{eq:linear} must be computed. In case of w-norm method the calibration can be explicitly stored in a weight matrix. For p-val calibration method, each e-SVM score must be calibrated using $K$ stored values of the non-parametric CDF model. This requires to search for two closest values an interpolate between them \eqref{eq:empiricalCDF} which yields complexity of $O(N\log{K})$. Since $K$ is a constant both methods have linear time complexity at query time with different constant.
+    At query time the calibrated e-SVM score~\eqref{eq:linear} must be computed. In case of w-norm method the calibration can be explicitly stored in a weight matrix. For p-val calibration method, each e-SVM score must be calibrated using $K$ stored values of the non-parametric CDF model. This requires to search for two closest values an interpolate between them \eqref{eq:empiricalCDF} which yields complexity of $O(N\log{K})$. Since $K$ is a constant both methods have linear time complexity at query time with different constant. The actual running time per query on bag-of-words is $340ms$ for p-val calibration and $3ms$ for w-norm method.
 }
 
 %%%%%%%%%%%%%%%%%%%%%
